添加密码加盐加密功能，添加日志输出功能

--- a/views/passport/confirm.email.feedback.ejs
+++ b/views/passport/confirm.email.feedback.ejs
@@ -15,9 +15,11 @@
       <div class="alert alert-<%= locals.alert_type %>" role="alert">
         <h1><%= locals.title %></h1>
         <p><%= locals.subtitle %></p>
+        <p><a href="/passport/login">返回登录</a></p>
       </div>
     </div>
-  </div>
+  </div> 
+
 </body>
 
 </html>
