--- a/views/passport/register.ejs
+++ b/views/passport/register.ejs
@@ -17,6 +17,15 @@
 
       <div class="mb-2">
         <div>
+          <label class="form-label" for="account">账号</label>
+        </div>
+        <div>
+          <input class="form-control" id="account" name="account" type="text" autocomplete="off" required value="<%=locals.body.account%>">
+        </div>
+      </div>
+
+      <div class="mb-2">
+        <div>
           <label class="form-label" for="email">邮箱</label>
         </div>
         <div>
