--- a/views/passport/captcha.code.input.ejs
+++ b/views/passport/captcha.code.input.ejs
@@ -1,7 +1,7 @@
 <% if(passport_settings.enable_captcha){ %>
 <div class="mb-2">
   <div>
-    <label class="form-label" for="code">验证码</label>
+    <label class="form-label" for="code"><%=locals.settings.name%> - <%= i18n('_dict_.captcha_code') %></label>
   </div>
   <div class="d-flex align-items-center gap-3">
     <div class="flex-fill">
