--- a/views/passport/register.ejs
+++ b/views/passport/register.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <%- include('/views/header') %>
-  <title>注册</title>
+  <title><%=locals.settings.name%> - <%= i18n('_dict_.register') %></title>
 </head>
 
 <body>
@@ -12,12 +12,12 @@
   <div class="container" style="max-width: 600px;">
     <form class="mt-5" method="POST">
 
-      <h3><%=locals.settings.name%> - 注册</h3>
+      <h3><%=locals.settings.name%> - <%= i18n('_dict_.register') %></h3>
       <hr>
 
       <div class="mb-2">
         <div>
-          <label class="form-label" for="account">账号</label>
+          <label class="form-label" for="account"><%= i18n('_dict_.account') %></label>
         </div>
         <div>
           <input class="form-control" id="account" name="account" type="text" autocomplete="off" required value="<%=locals.body.account%>">
@@ -26,7 +26,7 @@
 
       <div class="mb-2">
         <div>
-          <label class="form-label" for="email">邮箱</label>
+          <label class="form-label" for="email"><%= i18n('_dict_.email') %></label>
         </div>
         <div>
           <input class="form-control" id="email" name="email" type="email" autocomplete="email" required value="<%=locals.body.email%>">
@@ -35,7 +35,7 @@
 
       <div class="mb-2">
         <div class="d-flex align-items-center ">
-          <label class="form-label" for="password">密码</label>
+          <label class="form-label" for="password"><%= i18n('_dict_.password') %></label>
         </div>
         <div>
           <input class="form-control" id="password" name="password" type="password" autocomplete="off" required placeholder="" value="<%=locals.body.password%>">
@@ -44,10 +44,10 @@
 
       <div class="mb-2">
         <div class="d-flex align-items-center ">
-          <label class="form-label" for="confirm_password">重复密码</label>
+          <label class="form-label" for="repeat_password"><%= i18n('_dict_.repeat_password') %></label>
         </div>
         <div>
-          <input class="form-control" id="confirm_password" name="confirm_password" type="password" autocomplete="off" required placeholder="">
+          <input class="form-control" id="repeat_password" name="repeat_password" type="password" autocomplete="off" required placeholder="">
         </div>
       </div>
 
@@ -56,13 +56,13 @@
 
 
       <div class="w-100 mt-3">
-        <button type="submit" class="btn btn-primary w-100">注册</button>
+        <button type="submit" class="btn btn-primary w-100"><%= i18n('_dict_.register') %></button>
       </div>
     </form>
 
     <p class="mt-3">
-      已有账号？
-      <a href="/passport/login">登录</a>
+      <%= i18n('_dict_.has_account') %>？
+      <a href="/passport/login"><%= i18n('_dict_.login') %></a>
     </p>
 
 
