--- a/views/passport/reset.password.ejs
+++ b/views/passport/reset.password.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <%- include('/views/header') %>
-  <title>登录</title>
+  <title><%=locals.settings.name%> - <%= i18n('_dict_.reset') %><%= i18n('_dict_.password') %></title>
 </head>
 
 <body>
@@ -12,12 +12,12 @@
   <div class="container" style="max-width: 600px;">
 
     <form class="mt-5" method="POST">
-      <h3><%=locals.settings.name%> - 重置密码</h3>
+      <h3><%=locals.settings.name%> - <%= i18n('_dict_.reset') %><%= i18n('_dict_.password') %></h3>
       <hr>
 
       <div class="mb-2">
         <div>
-          <label class="form-label" for="email">邮箱</label>
+          <label class="form-label" for="email"><%= i18n('_dict_.email') %></label>
         </div>
         <div>
           <input class="form-control" id="email" name="email" type="email" autocomplete="email" required value="<%=locals.body.email%>">
@@ -27,13 +27,12 @@
       <%- include('./captcha.code.input.ejs') %>
 
       <div class="w-100 mt-3">
-        <button type="submit" class="btn btn-primary w-100">发送重置密码邮箱</button>
+        <button type="submit" class="btn btn-primary w-100"><%= i18n('_dict_.send_reset_email') %></button>
       </div>
     </form>
 
     <p class="mt-3">
-      记得密码？
-      <a href="/passport/login">登录</a>
+      <a href="/passport/login"><%= i18n('_dict_.login') %></a>
     </p>
 
     <% if(locals.validator_error || locals.error){  %>
