--- a/views/passport/reset.password.feedback.ejs
+++ b/views/passport/reset.password.feedback.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <%- include('/views/header') %>
-  <title>登录</title>
+  <title><%=locals.settings.name%> - <%= i18n('_dict_.reset_your_password') %></title>
 </head>
 
 <body>
@@ -12,12 +12,12 @@
   <div class="container" style="max-width: 600px;">
 
     <form class="mt-5" method="POST">
-      <h3><%=locals.settings.name%> - 设置你的密码</h3>
+      <h3><%=locals.settings.name%> - <%= i18n('_dict_.reset_your_password') %></h3>
       <hr>
 
       <div class="mb-2">
         <div class="d-flex align-items-center ">
-          <label class="form-label" for="password">密码</label>
+          <label class="form-label" for="password"><%= i18n('_dict_.password') %></label>
         </div>
         <div>
           <input class="form-control" id="password" name="password" type="password" autocomplete="off" required minlength="<%=passport_settings.password_min_length %>" maxlength="<%=passport_settings.password_max_length %>">
@@ -26,22 +26,22 @@
 
       <div class="mb-2">
         <div class="d-flex align-items-center ">
-          <label class="form-label" for="confirm_password">重复密码</label>
+          <label class="form-label" for="repeat_password"><%= i18n('_dict_.repeat_password') %></label>
         </div>
         <div>
-          <input class="form-control" id="confirm_password" name="confirm_password" type="password" autocomplete="off" required minlength="<%=passport_settings.password_min_length %>" maxlength="<%=passport_settings.password_max_length %>">
+          <input class="form-control" id="repeat_password" name="repeat_password" type="password" autocomplete="off" required minlength="<%=passport_settings.password_min_length %>" maxlength="<%=passport_settings.password_max_length %>">
         </div>
       </div>
 
       <%- include('./captcha.code.input.ejs') %>
 
       <div class="w-100 mt-3">
-        <button type="submit" class="btn btn-primary w-100">确认密码</button>
+        <button type="submit" class="btn btn-primary w-100"><%= i18n('_dict_.confirm') %></button>
       </div>
     </form>
 
     <p class="mt-3">
-      <a href="/passport/login">返回登录</a>
+      <a href="/passport/login"><%= i18n('_dict_.login') %></a>
     </p>
 
     <% if(locals.validator_error || locals.error){  %>
