--- a/views/menus.ejs
+++ b/views/menus.ejs
@@ -9,6 +9,9 @@
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/" class="nav-link px-2 link-secondary"><%=locals.settings.name%></a></li>
+        <% if (locals.user?.permissions?.includes('admin')) { %>
+        <li><a href="/admin/index" class="nav-link px-2 link-secondary">admin</a></li>
+        <% } %>
       </ul>
 
       <div class="dropdown text-end">
