添加公共报错信息组件

--- a/views/passport/register.ejs
+++ b/views/passport/register.ejs
@@ -66,11 +66,8 @@
     </p>
 
 
-    <% if(locals.validator_error || locals.error){  %>
-    <div class="alert alert-danger mt-3" role="alert">
-      <%=locals.validator_error%><%=locals.error%>
-    </div>
-    <% } %>
+
+    <%- include('/views/components/error.alert.ejs') %>
 
     <% if(locals.success){  %>
     <div class="alert alert-success mt-3" role="alert">
