--- a/views/passport/login.ejs
+++ b/views/passport/login.ejs
@@ -52,11 +52,8 @@
       <a href="/passport/register"><%= i18n('_dict_.register_now') %> </a>
     </p>
 
-    <% if(locals.validator_error || locals.error){  %>
-    <div class="alert alert-danger mt-3" role="alert">
-      <%=locals.validator_error%><%=locals.error%>
-    </div>
-    <% } %>
+
+    <%- include('/views/components/error.alert.ejs') %>
 
     <% if(locals.success){  %>
     <div class="alert alert-success mt-3" role="alert">
