--- a/views/passport/reset.password.feedback.ejs
+++ b/views/passport/reset.password.feedback.ejs
@@ -44,11 +44,8 @@
       <a href="/passport/login"><%= i18n('_dict_.login') %></a>
     </p>
 
-    <% if(locals.validator_error || locals.error){  %>
-    <div class="alert alert-danger mt-3" role="alert">
-      <%=locals.validator_error%><%=locals.error%>
-    </div>
-    <% } %>
+
+    <%- include('/views/components/error.alert.ejs') %>
 
     <% if(locals.success){  %>
     <div class="alert alert-success mt-3" role="alert">
