--- a/views/post/post.ejs
+++ b/views/post/post.ejs
@@ -3,7 +3,47 @@
 %>
 
 <style>
- 
+  img, video {
+    max-width: 100%; 
+  }
+
+  .post {
+    max-width: 800px;
+  }
+
+  .post-wrapper{
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 24px;
+    border-radius: 12px;
+    background-color: white; 
+    border-radius: 4px;
+  }
+
+  .breadcrumbs {
+    display: flex
+  }
+
+  .breadcrumb a {
+    color: #1b6091 !important;
+  }
+
+  .breadcrumb-split {
+    margin: 0px 4px;
+  }
+
+  .post .title {
+    font-size: 18px; 
+  }
+
+  .vertical-divider {
+    border-left: 1px solid #e0e0e0;
+    height: 100%;
+    margin: 0px 12px;
+  }
+
+  .post-content {
+    padding: 4px;
+  }
 </style>
 
 <!DOCTYPE html>
@@ -16,12 +56,32 @@
 
 <body>
   <%- include('/views/menus') %>
-  <div class="container ">
-    <div class="m-auto" style="max-width: 1200px;">
-      <h1><%= post.title %></h1>
-      <hr>
-      <div class="mt-2">
-        <div class="leap"><%= post.content %></div>
+  <div class="container">
+    <div class="m-auto post"> 
+      <div class="post-wrapper">
+        <div class="breadcrumbs">
+          <span class="breadcrumb"><a href="/">首页</a></span>
+          <span class="breadcrumb-split">></span>
+          <span class="breadcrumb"><a href="/category?id=<%= category.short_id %>"><%= category.name %></a></span>
+          <span class="breadcrumb-split">></span>
+          <span class="breadcrumb"><a href="/p/<%= post.short_id %>"><%= post.title.length > 10 ?  post.title.slice(0,10) + '...' :  post.title %></a></span>
+        </div>
+
+        <div class="title"><b><%= post.title %></b></div>
+        <div class="d-flex flex-wrap mt-3">
+          <div class="flex-fill">
+            <small>发布于：<%= dayjs(post.post_at)  %></small>
+          </div>
+          <div class="flex-auto">
+            <small>查看：<%= post.statistics.comments %></small>
+            <span class="vertical-divider"></span>
+            <small>回帖：<%= post.statistics.comments %></small>
+          </div>
+        </div>
+        <hr>
+        <div class="mt-2 post-content">
+          <div class="leap"><%- post.html %></div>
+        </div>
       </div>
     </div>
   </div>
