--- a/views/render/category.ejs
+++ b/views/render/category.ejs
@@ -1,25 +1,122 @@
- 
+ <!DOCTYPE html>
+ <html lang="en">
 
-<!DOCTYPE html>
-<html lang="en">
+ <head>
+   <%- include('/views/header') %>
+   <title><%=locals.settings.name%></title>
 
-<head>
-  <%- include('/views/header') %>
-  <title><%=locals.settings.name%></title>
-</head>
+   <style>
+     .container {
+       background-color: white;
+     }
 
-<body>
-  <%- include('/views/menus') %>
-  <div class="container ">
-    <div class="m-auto" style="max-width: 1200px;">
-      <h1><%= category.name %></h1>
-      <div class="leap"><%= category.description %></div>
-      <hr>
-      <div class="mt-2">
-        <button class="btn btn-primary">发表帖子 +</button>
-      </div>
-    </div>
-  </div>
-</body>
+     .category-container {
+       background-color: white;
+       padding: 24px 0px;
+       border-radius: 4px;
+     }
 
-</html>
+
+     .breadcrumbs {
+       display: flex
+     }
+
+     .breadcrumb a {
+       color: #1b6091 !important;
+     }
+
+     .breadcrumb-split {
+       margin: 0px 4px;
+     }
+
+
+     .post {
+       padding: 6px;
+       display: flex;
+       border-bottom: 1px solid #eaeaea;
+     }
+
+     .post .info {
+       flex: 1;
+     }
+
+     .post .statistics {
+       flex: 0 auto;
+       padding: 0px 6px;
+       font-size: 14px;
+     }
+
+     .post small {
+       font-size: 13px;
+     }
+
+     .post .title {
+       font-size: 16px;
+       font-weight: bold;
+     }
+   </style>
+
+ </head>
+
+ <body>
+   <%- include('/views/menus') %>
+   <div class="container category-container ">
+     <div class="m-auto" style="max-width: 1200px;">
+       <div class="breadcrumbs">
+         <span class="breadcrumb"><a href="/">首页</a></span>
+         <span class="breadcrumb-split">></span>
+         <span class="breadcrumb"><a href="/category?id=<%= category.short_id %>"><%= category.name %></a></span>
+       </div>
+       <div class="d-flex">
+         <div class="flex-auto">
+           <img style="max-width: 86px;" src="<%= category.icon %>">
+         </div>
+         <div class="felx-fill ms-lg-2">
+           <h1><%= category.name %></h1>
+           <div class="leap"><%= category.description %></div>
+         </div>
+       </div>
+       <hr>
+       <div class="mt-2">
+         <a href="/post/editor?category_uid=<%= category.uid %>"><button class="btn btn-primary">发表帖子 +</button></a>
+       </div>
+
+       <div class="mt-2">
+         <% if (locals.posts?.length) { %>
+         <div class="posts">
+           <% for (let i = 0 ;i < locals.posts.length; i++) {  %>
+           <% const item = locals.posts[i]; %>
+           <div class="mb-1">
+             <div class="post">
+               <div class="info">
+                 <div class="title"><a class="text-dark " href="/p/<%= item.short_id %>"><%= item.title %></a></div>
+                 <div class="d-inline">
+                   <small class="description">
+                     <a href="/u/<%= item.user.account  %>"><%= item.user.account %></a>
+                     <span>：<%= item.text.length > 100 ? item.text.slice(0,100) + '...' :  item.text %></span>
+                   </small>
+                 </div>
+                 <div>
+                   <small>最新回帖：<%= item.user.account %></small>
+                 </div>
+               </div>
+               <div class="statistics text-secondary">
+                 <div>查看 : <%= item.statistics.views %></div>
+                 <div>回帖 : <%= item.statistics.comments  %></div>
+               </div>
+             </div>
+           </div>
+           <% } %>
+         </div>
+         <% } else { %>
+         <div>
+           <%= i18n('_dict_.no_data') %>
+         </div>
+         <% } %>
+       </div>
+
+     </div>
+   </div>
+ </body>
+
+ </html>
