优化添加背景图后部分页面透明问题

--- a/views/passport/reset.password.feedback.ejs
+++ b/views/passport/reset.password.feedback.ejs
@@ -4,6 +4,13 @@
 <head>
   <%- include('/views/header') %>
   <title><%=locals.settings.name%> - <%= i18n('_dict_.reset_your_password') %></title>
+  <style>
+    .container form {
+      background-color: white;
+      border-radius: 4px;
+      padding: 24px;
+    }
+  </style>
 </head>
 
 <body>
@@ -38,12 +45,13 @@
       <div class="w-100 mt-3">
         <button type="submit" class="btn btn-primary w-100"><%= i18n('_dict_.confirm') %></button>
       </div>
+
+
+      <p class="mt-3">
+        <a href="/passport/login"><%= i18n('_dict_.login') %></a>
+      </p>
+
     </form>
-
-    <p class="mt-3">
-      <a href="/passport/login"><%= i18n('_dict_.login') %></a>
-    </p>
-
 
     <%- include('/views/components/error.alert.ejs') %>
 
