--- a/views/passport/register.ejs
+++ b/views/passport/register.ejs
@@ -4,6 +4,13 @@
 <head>
   <%- include('/views/header') %>
   <title><%=locals.settings.name%> - <%= i18n('_dict_.register') %></title>
+  <style>
+    .container form {
+      background-color: white;
+      border-radius: 4px;
+      padding: 24px;
+    }
+  </style>
 </head>
 
 <body>
@@ -58,12 +65,14 @@
       <div class="w-100 mt-3">
         <button type="submit" class="btn btn-primary w-100"><%= i18n('_dict_.register') %></button>
       </div>
-    </form>
 
-    <p class="mt-3">
-      <%= i18n('_dict_.has_account') %>？
-      <a href="/passport/login"><%= i18n('_dict_.login') %></a>
-    </p>
+
+      <p class="mt-3">
+        <%= i18n('_dict_.has_account') %>？
+        <a href="/passport/login"><%= i18n('_dict_.login') %></a>
+      </p>
+
+    </form>
 
 
 
