--- a/views/passport/reset.password.ejs
+++ b/views/passport/reset.password.ejs
@@ -4,12 +4,19 @@
 <head>
   <%- include('/views/header') %>
   <title><%=locals.settings.name%> - <%= i18n('_dict_.reset') %><%= i18n('_dict_.password') %></title>
+  <style>
+    .container form {
+      background-color: white;
+      border-radius: 4px;
+      padding: 24px;
+    }
+  </style>
 </head>
 
 <body>
   <%- include('/views/menus') %>
 
-  <div class="container" style="max-width: 600px;">
+  <div class="container category-container" style="max-width: 600px;">
 
     <form class="mt-5" method="POST">
       <h3><%=locals.settings.name%> - <%= i18n('_dict_.reset') %><%= i18n('_dict_.password') %></h3>
@@ -29,11 +36,12 @@
       <div class="w-100 mt-3">
         <button type="submit" class="btn btn-primary w-100"><%= i18n('_dict_.send_reset_email') %></button>
       </div>
-    </form>
 
-    <p class="mt-3">
-      <a href="/passport/login"><%= i18n('_dict_.login') %></a>
-    </p>
+      <p class="mt-3">
+        <a href="/passport/login"><%= i18n('_dict_.login') %></a>
+      </p>
+
+    </form>
 
 
     <%- include('/views/components/error.alert.ejs') %>
