--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="<%=locals.settings.meta.keywords%>">
 <meta name="description" content="<%=locals.settings.meta.description%>">
-<link rel="stylesheet" href="/public/bootstrap.css">
-<link rel="stylesheet" href="/public/custom.css">
-<script src="/public/bootstrap.js"></script>
+<link rel="stylesheet" href="/assets/bootstrap.css">
+<link rel="stylesheet" href="/assets/custom.css">
+<script src="/assets/bootstrap.js"></script>
