--- a/views/render/index.ejs
+++ b/views/render/index.ejs
@@ -94,18 +94,18 @@
         <div style="max-width: 400px;" class="col-lg-4 col-12">
 
           <div class="card mb-3">
-            <h5 class="card-header">新帖子</h5>
+            <h5 class="card-header">热门帖子</h5>
             <div class="card-body">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">xxxxxxx</p>
+ 
             </div>
           </div>
 
           <div class="card">
-            <h5 class="card-header">新帖子</h5>
+            <h5 class="card-header">精华帖子</h5>
             <div class="card-body">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text"> xxxx </p>
+ 
             </div>
           </div>
         </div>
